--- a/prepros-6.config
+++ b/prepros-6.config
@@ -52,7 +52,8 @@
         "css/blocks/reviews.scss",
         "css/blocks/work.scss",
         "css/blocks/delivery.scss",
-        "css/blocks/form.scss"
+        "css/blocks/form.scss",
+        "css/blocks/footer.scss"
       ]
     }
   ],
